<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="app_name">Thoughts</string>
    <string name="internal_app_name">Thoughts</string>
    <string name="app_desc">Speak your mind anonymously.</string>
    <string name="date_uploaded_format">Date: %1$s</string>

    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="application">Application</string>
    <string name="ok">OK</string>
    <string name="toggle_fullscreen">Toggle fullscreen</string>
    <string name="app_version_format" translatable="false">%1$s v%2$s</string>
    <string name="force_update_format">Change:\n%1$s\n\nDate: %2$s\n\nApplication update is required.</string>
    <string name="about_format">%1$s\nAuthor: 14178556A (Saren)\nA CCN2279 Group Project</string>
    <string name="update_format"><![CDATA[Update: ]]></string>

    <string name="update_change">Change:</string>
    <string name="unknown_error">Unknown error occurred. Please re-install this application if problem persists.</string>
    <string name="always">Always</string>
    <string name="wrong_credentials">Incorrect credentials.</string>

    <string name="network_problem_message">Oh no, I can\'t connect to server! Please check your Internet connection first.</string>
    <string name="account">Account</string>
    <string name="cancel">Cancel</string>
    <string name="unsupported_android_version">This action is unsupported in current Android version.</string>

    <string name="there_is_no_more_results">This is no more results.</string>
    <string name="search_hint">Keywords or HashTags</string>
    <string name="hot">Hot</string>
    <string name="latest">Latest</string>
    <string name="rising">Rising</string>
    <string name="controversial">Controversial</string>
    <string name="top">Top</string>
    <string name="share">Share</string>
    <string name="upvote">Vote up</string>
    <string name="downvote">Vote down</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="added_to_favourite">Added thought #%1$d to favourite</string>
    <string name="thought_exists_in_favourite">This thought already exists in favourite</string>
    <string name="upvote_success">Successfully upvoted thought #%1$d</string>
    <string name="downvote_success">Successfully downvoted thought #%1$d</string>
    <string name="favourite">Favourite thoughts</string>
    <string name="search">Search</string>
    <string name="my_thoughts">My thoughts</string>
    <string name="personal">Personal</string>
    <string name="item_removed">Item removed</string>
    <string name="undo">undo</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_thought">Delete thought</string>
    <string name="delete_thought_format">Are you sure you want to delete thought #%1$d? Your thought will be lost forever!</string>
    <string name="share_format">Thoughts - #%1$d\n%2$s\n\n%3$s\n%4$s</string>
    <string name="set_time_span">Set time span</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="all_time">All time</string>
    <string name="this_year">This year</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_thoughts_font_size">Thoughts font size</string>

    <string-array name="pref_font_sizes_titles">
        <item>0.5x</item>
        <item>0.75x</item>
        <item>1x</item>
        <item>1.25x</item>
        <item>1.5x</item>
        <item>2x</item>
    </string-array>
    <string-array name="pref_font_sizes_values">
        <item>0.5</item>
        <item>0.75</item>
        <item>1</item>
        <item>1.25</item>
        <item>1.5</item>
        <item>2</item>
    </string-array>

    <string name="pref_header_notifications">HashTag monitoring &amp; Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_hashtag_monitor">HashTag monitor</string>
    <string name="pref_description_hashtag_monitor">You will be notified when there is a new thought containing at least a monitored HashTag</string>
    <string name="mass_edit">Mass edit</string>
    <string name="regex_filter_hint">One word (without #) per line.</string>
    <string name="hashtag_monitor">HashTag monitor</string>
    <string name="add">Add</string>
    <string name="preview">Preview / Submit</string>

    <string name="title_hint">Title</string>
    <string name="content_hint">Content</string>
    <string name="hashtags_hint">HashTags</string>
    <string name="submit">Submit</string>
    <string name="submit_thought">Submit thought</string>
    <string name="submit_thought_confirm">Are you sure you want to submit this thought?</string>

    <string name="please_wait">Please wait&#8230;</string>
    <string name="loading">Loading</string>
    <string name="submitting_thought">Submitting your thought</string>
    <string name="submit_success">Successfully submitted your thought #%1$d</string>
    <string name="voting">Voting</string>
    <string name="deleting">Deleting thought #%1$d</string>
    <string name="delete_success">Successfully deleted your thought #%1$d</string>
    <string name="hashtag_matched">HashTag matched: #%1$s</string>
    <string name="hashtag_matched_id_title">#%1$s - %2$s</string>


</resources>
